--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 }
 
 .logo-video {
-    border-radius: 50px;
+    border-radius: 10%;
     transition: .2s;
     object-fit: cover;
 }
 
 .logo-video:hover {
     box-shadow: 0 0 8px blue;
-    transform: scale(1);
+    transform: scale(1.08);
 }
 
 body {
@@ -87,7 +87,7 @@ header a:hover {
 
 .btn-contato button:hover{
     box-shadow: 0px 0px 8px #0d9c12;
-    transform: scale(1.2); 
+    transform: scale(1); 
 }
 
 
@@ -133,7 +133,7 @@ section.topo-do-site .flex{
 
 .btn-curriculo button:hover{
     box-shadow: 0px 0px 8px #0d9c12;
-    transform: scale(1.2); 
+    transform: scale(1.08); 
 }
 
 section.topo-do-site .flex .img-topo-site{
@@ -215,6 +215,10 @@ section.sobre{
 
 .sobre .img-sobre .img-perfil{
     border-radius: 50%;
+}
+
+.img-perfil{
+    transform: scaleX(-1); 
 }
 
 .sobre .img-sobre .img-linguagens{
@@ -368,6 +372,10 @@ footer .line-footer p a{
         flex-direction: column;
     }
 
+    h2.titulo{
+        line-height: 40px;
+    }
+
     .topo-do-site .flex{
         flex-direction: column-reverse;
     }
@@ -375,6 +383,20 @@ footer .line-footer p a{
     /* CABEÇALHO */
     .menu-desktop, .btn-contato{
         display: none;
+    }
+
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+    }
+
+    .logo-video {
+        width: 200px;
+        height: 100px;
+        object-fit: cover;
     }
 
     /* TOPO DO SITE */
@@ -419,6 +441,32 @@ footer .line-footer p a{
         justify-content: center;
         gap: 10px;
         padding-bottom: 70px;
+    }
+
+    /* MEUS CONHECIMENTOS */
+    section.projeto{
+        padding: 40px 8%;
+    }
+
+    /* PORTFOLIO */
+
+    section.portfolio{
+        padding: 10px 8%;
+    }
+
+    .img-port{
+        width: 90%;
+        height: 460px;
+        margin: 0 auto;
+    }
+
+    section.portfolio .flex{
+        gap: 60px;
+    }
+
+    /* RODAPE */
+    footer .line-footer{
+        text-align: center;
     }
 }
 
